Se agrega status 200 al comentario de cargue masivo.
